<resources>
    <string name="app_name">Smart Wise</string>
    <string name="logo_bg">logo_bg</string>
    <string name="offers">Promotions</string>
    <string name="home">Home</string>
    <string name="cart">My Cart</string>
    <string name="menu">Menu</string>
    <string name="store">Store</string>
    <string name="notifications">Notifications</string>
    <string name="search">Search</string>
    <string name="all_categories">All Categories</string>
    <string name="view_all"><![CDATA[View all >]]></string>
    <string name="tea_beverages"><![CDATA[Tea & Beverages]]></string>
    <string name="category_item_name">Category Item Name</string>
    <string name="soap_personal_care"><![CDATA[Soap & Personal Care]]></string>
    <string name="biscuits">Biscuits</string>
    <string name="fruits_vegetables"><![CDATA[Fruits & Vegetables]]></string>
    <string name="pampers">Pampers</string>
    <string name="hygiene">Hygiene Essentials</string>
    <string name="recommended">Recommended</string>
    <string name="carrot">Carrot</string>
    <string name="new_arrivals">New Arrivals</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="welcome_to_grocery_app">Welcome to Grocery App</string>
    <string name="lets_get_started">Let\'s get started</string>
    <string name="username">Username</string>
    <string name="email">Email Address</string>
    <string name="city">City</string>
    <string name="password">Password</string>
    <string name="login_signup_menu">Login Signup menu</string>
    <string name="login_signup">Login/Signup</string>
    <string name="my_profile">My Profile</string>
    <string name="my_cart">My Cart</string>
    <string name="my_orders">My Orders</string>
    <string name="feedback">Feedback</string>
    <string name="my_address">My Address</string>
    <string name="tc"><![CDATA[Terms & Conditions]]></string>
    <string name="help">Help</string>
    <string name="contact_us">Contact Us</string>
    <string name="exit">Exit</string>
    <string name="profile_image">Profile Image</string>
    <string name="back">Back</string>
    <string name="camera">Camera</string>
    <string name="user_name">User Name</string>
    <string name="user_email">E-Mail</string>
    <string name="user_city">City</string>
    <string name="user_number">Phone Number</string>
    <string name="track_your_order">Track Your Order</string>
    <string name="order_details">Order Details</string>
    <string name="delivery_slot">Delivery Slot:</string>
    <string name="date">Date</string>
    <string name="colon">:</string>
    <string name="time">Time</string>
    <string name="status">Delivery Status</string>
    <string name="address">Address</string>
    <string name="complete_address">Stack Buffers Gold Point Murree Road Rawalpindi.</string>
    <string name="contact">Contact:</string>
    <string name="dummy_date">04–04-2020</string>
    <string name="dummy_time">2:00 PM - 3:00 PM</string>
    <string name="dummy_status">Pending</string>
    <string name="dummy_number">+92–300-1234567</string>
    <string name="orders_payment"><![CDATA[Order & Payment Details]]></string>
    <string name="order_id">Order ID</string>
    <string name="dummy_order_id">12345</string>
    <string name="item_name">Item Name</string>
    <string name="qty">Qty</string>
    <string name="price">Price</string>
    <string name="grand_total">Grand Total</string>
    <string name="cancel_order">Cancel Order</string>
    <string name="add_number">Add Number</string>
    <string name="whats_your_number">What\'s your number</string>
    <string name="enter_number">Enter mobile number to continue</string>
    <string name="send">Send</string>
    <string name="verify_number">Verify Number</string>
    <string name="verify_your_number">Verify your number</string>
    <string name="code_sent">"6 digit number sent to "</string>
    <string name="verify">Verify</string>
    <string name="resend">Resend</string>
    <string name="congrats_message">Your mobile number verified successfully!</string>
    <string name="done">Done</string>
    <string name="congratulations">Congratulations!</string>
    <string name="sign_in_to_grocery_app">Sign in to Grocery App</string>
    <string name="enter_email_password"><![CDATA[Enter email & password to continue]]></string>
    <string name="forgot_password">Forgot password?</string>
    <string name="forget_password">Forgot Password</string>
    <string name="password_reset">Password reset</string>
    <string name="enter_email_address_to_send_reset_code">Enter email address to send reset code</string>
    <string name="close">Close</string>
    <string name="today">Today</string>
    <string name="clear_all">Clear all</string>
    <string name="yesterday">Yesterday</string>
    <string name="last_week">Last week</string>
    <string name="notification_item">Notification Item</string>
    <string name="fresh_food">Fresh Food</string>
    <string name="description">Notification Description</string>
    <string name="beverages">Beverages</string>
    <string name="search_product">Search Product</string>
    <string name="chocolate_drink">Chocolate Drink</string>
    <string name="proceed_to_checkout">Proceed to Checkout</string>
    <string name="user_points">points</string>
    <string name="coin">Coin</string>
    <string name="favorite">Favorite</string>
    <string name="return_item">Return Item</string>
    <string name="coupons">Coupons</string>
    <string name="share_cart">Share Cart</string>
    <string name="languages">Languages</string>
    <string name="about_product">About Product:</string>
    <string name="my_wish_list">My Wish List</string>
    <string name="available_points">Available Points</string>
    <string name="equal">"Equal "</string>
    <string name="to_redeem">to redeem</string>
    <string name="one_coin_equals">1 =</string>
    <string name="how_earn">How You Can Earn Points</string>
    <string name="each">Each $100.00 Spent for your order will earn 2 Points.</string>
    <string name="how_spend">How You Can Spend Points</string>
    <string name="each_point">Each 1 Point can be redeemed for $</string>
    <string name="our_policies">Our Policies</string>
    <string name="policy">A transaction will expire after 2 days since</string>
    <string name="gold">Gold</string>
    <string name="coins">Coins</string>
    <string name="category">Category:</string>
    <string name="product_name">Product Name:</string>
    <string name="percentage">Percentage</string>
    <string name="type_code">Type Code</string>
    <string name="enter">Enter</string>
    <string name="db_er">Database Error</string>
    <string name="promotion">Promotion</string>
    <string name="sub_total">Sub-Total</string>
    <string name="item_in_cart">Item is in your Cart</string>
    <string name="dummy_price">Rs. 100</string>
    <string name="dummy_item_name">Item Name</string>
    <string name="add">Add</string>
    <string name="remove">Remove</string>
    <string name="one">1</string>
    <string name="product_image">Product Image</string>
    <string name="rs">"Rs. "</string>
    <string name="map_image">Map Image</string>
    <string name="no_of_products">Number of Products</string>
    <string name="order_price">Order Price</string>
    <string name="products">Products</string>
    <string name="return_items">Return Items</string>
    <string name="zero">0</string>
    <string name="spin_win"><![CDATA[Spin & Win]]></string>
    <string name="order_manually">Order Manually</string>
    <string name="gallery">Gallery</string>
    <string name="manual">Manual</string>
    <string name="add_item">Add Item</string>
    <string name="place_order">Place Order</string>
    <string name="image_order">Image Order</string>
    <string name="silver">Silver</string>
    <string name="plat">Platinum</string>
    <string name="banned">Your Account has been BANNED</string>
    <string name="default_notification_channel_id">SmartWise</string>
    <string name="logout">Log Out</string>
</resources>