<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_menu"
        android:icon="@drawable/me"
        android:title="@string/menu" />
    <item
        android:id="@+id/action_home"
        android:enabled="true"
        android:icon="@drawable/home"
        android:title="@string/home" />
    <item android:id="@+id/action_spin"
        app:iconTint="@color/colorPrimary"
        android:icon="@mipmap/spin"
        android:title="@string/spin_win" />
    <item
        android:id="@+id/action_cart"
        android:icon="@drawable/cart"
        android:title="@string/cart" />
    <item
        android:id="@+id/action_offers"
        android:icon="@drawable/discount"
        android:title="@string/promotion" />
</menu>