<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:background="@android:color/black"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/loginSignupMenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/_10sdp"
            android:drawablePadding="@dimen/_15sdp"
            android:fontFamily="@font/roboto_bold"
            android:gravity="center"
            android:text="@string/login_signup"
            android:textColor="@android:color/white"
            android:textSize="@dimen/_15sdp"
            app:drawableStartCompat="@drawable/ic_login_signup"
            app:drawableTint="@android:color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/myProfileMenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            android:drawablePadding="@dimen/_15sdp"
            android:fontFamily="@font/roboto_bold"
            android:gravity="center"
            android:text="@string/my_profile"
            android:textColor="@android:color/white"
            android:textSize="@dimen/_15sdp"
            app:drawableStartCompat="@drawable/ic_profile"
            app:drawableTint="@android:color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loginSignupMenu" />

        <TextView
            android:id="@+id/myCartMenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            android:drawablePadding="@dimen/_15sdp"
            android:fontFamily="@font/roboto_bold"
            android:gravity="center"
            android:text="@string/my_cart"
            android:textColor="@android:color/white"
            android:textSize="@dimen/_15sdp"
            app:drawableStartCompat="@drawable/ic_my_cart"
            app:drawableTint="@android:color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/myProfileMenu" />

        <TextView
            android:id="@+id/myOrdersMenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            android:drawablePadding="@dimen/_15sdp"
            android:fontFamily="@font/roboto_bold"
            android:gravity="center"
            android:text="@string/my_orders"
            android:textColor="@android:color/white"
            android:textSize="@dimen/_15sdp"
            app:drawableStartCompat="@drawable/ic_my_orders"
            app:drawableTint="@android:color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/myCartMenu" />

        <TextView
            android:id="@+id/favoriteMenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            android:drawablePadding="@dimen/_15sdp"
            android:fontFamily="@font/roboto_bold"
            android:gravity="center"
            android:text="@string/favorite"
            android:textColor="@android:color/white"
            android:textSize="@dimen/_15sdp"
            app:drawableStartCompat="@drawable/ic_favorite"
            app:drawableTint="@android:color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/myOrdersMenu" />

        <TextView
            android:id="@+id/returnItemMenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            android:drawablePadding="@dimen/_15sdp"
            android:fontFamily="@font/roboto_bold"
            android:gravity="center"
            android:text="@string/return_item"
            android:textColor="@android:color/white"
            android:textSize="@dimen/_15sdp"
            app:drawableStartCompat="@drawable/ic_return_item"
            app:drawableTint="@android:color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/favoriteMenu" />

        <TextView
            android:id="@+id/couponsMenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            android:drawablePadding="@dimen/_15sdp"
            android:fontFamily="@font/roboto_bold"
            android:gravity="center"
            android:text="@string/coupons"
            android:textColor="@android:color/white"
            android:textSize="@dimen/_15sdp"
            app:drawableStartCompat="@drawable/ic_coupons"
            app:drawableTint="@android:color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/returnItemMenu" />

        <TextView
            android:id="@+id/shareCartMenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            android:drawablePadding="@dimen/_15sdp"
            android:fontFamily="@font/roboto_bold"
            android:gravity="center"
            android:text="@string/share_cart"
            android:textColor="@android:color/white"
            android:textSize="@dimen/_15sdp"
            app:drawableStartCompat="@drawable/ic_share_cart"
            app:drawableTint="@android:color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/couponsMenu" />

        <TextView
            android:id="@+id/helpMenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            android:drawablePadding="@dimen/_15sdp"
            android:fontFamily="@font/roboto_bold"
            android:gravity="center"
            android:text="@string/help"
            android:textColor="@android:color/white"
            android:textSize="@dimen/_15sdp"
            app:drawableStartCompat="@drawable/ic_help"
            app:drawableTint="@android:color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/shareCartMenu" />

        <TextView
            android:id="@+id/contactUsMenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            android:drawablePadding="@dimen/_15sdp"
            android:fontFamily="@font/roboto_bold"
            android:gravity="center"
            android:text="@string/contact_us"
            android:textColor="@android:color/white"
            android:textSize="@dimen/_15sdp"
            app:drawableStartCompat="@drawable/ic_contact_us"
            app:drawableTint="@android:color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/helpMenu" />

        <TextView
            android:id="@+id/languagesMenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            android:drawablePadding="@dimen/_15sdp"
            android:fontFamily="@font/roboto_bold"
            android:gravity="center"
            android:visibility="gone"
            android:text="@string/languages"
            android:textColor="@android:color/white"
            android:textSize="@dimen/_15sdp"
            app:drawableStartCompat="@drawable/ic_languages"
            app:drawableTint="@android:color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/contactUsMenu" />

        <TextView
            android:id="@+id/exitMenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            android:drawablePadding="@dimen/_15sdp"
            android:fontFamily="@font/roboto_bold"
            android:gravity="center"
            android:text="@string/logout"
            android:textColor="@android:color/white"
            android:textSize="@dimen/_15sdp"
            app:drawableStartCompat="@drawable/ic_exit"
            app:drawableTint="@android:color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/languagesMenu" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>